fixing things reported by FindBugs