@@ -2,7 +2,6 @@ package com.puppycrawl.tools.checkstyle.filters;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
-
 import org.junit.Before;
 import org.junit.Test;
 
@@ -21,15 +20,15 @@ public class FilterSetTest
     @Test
     public void testEmptyChain()
     {
-        assertFalse("0", filter.accept(new Integer(0)));
+        assertFalse("0", filter.accept(Integer.valueOf(0)));
     }
 
     @Test
     public void testOneFilter()
     {
         filter.addFilter(new IntMatchFilter(0));
-        assertTrue("0", filter.accept(new Integer(0)));
-        assertFalse("1", filter.accept(new Integer(1)));
+        assertTrue("0", filter.accept(Integer.valueOf(0)));
+        assertFalse("1", filter.accept(Integer.valueOf(1)));
     }
 
     @Test
@@ -37,9 +36,9 @@ public class FilterSetTest
     {
         filter.addFilter(new IntMatchFilter(0));
         filter.addFilter(new IntRangeFilter(0, 2));
-        assertTrue("0", filter.accept(new Integer(0)));
-        assertTrue("1", filter.accept(new Integer(1)));
+        assertTrue("0", filter.accept(Integer.valueOf(0)));
+        assertTrue("1", filter.accept(Integer.valueOf(1)));
         filter.addFilter(new IntRangeFilter(3, 4));
-        assertTrue("0 is in [3,4]", filter.accept(new Integer(0)));
+        assertTrue("0 is in [3,4]", filter.accept(Integer.valueOf(0)));
     }
 }
