@@ -3,7 +3,6 @@ package com.puppycrawl.tools.checkstyle.filters;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
-
 import org.junit.Test;
 
 /** Tests IntMatchFilter */
@@ -13,9 +12,9 @@ public class IntMatchFilterTest
     public void testDecide()
     {
         final IntFilter filter = new IntMatchFilter(0);
-        assertFalse("less than", filter.accept(new Integer(-1)));
-        assertTrue("equal", filter.accept(new Integer(0)));
-        assertFalse("greater than", filter.accept(new Integer(1)));
+        assertFalse("less than", filter.accept(Integer.valueOf(-1)));
+        assertTrue("equal", filter.accept(Integer.valueOf(0)));
+        assertFalse("greater than", filter.accept(Integer.valueOf(1)));
     }
 
     @Test
