@@ -3,7 +3,6 @@ package com.puppycrawl.tools.checkstyle.filters;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
-
 import org.junit.Test;
 
 /** Tests IntRangeFilter */
@@ -13,31 +12,31 @@ public class IntRangeFilterTest
     public void testDecide()
     {
         final IntFilter filter = new IntRangeFilter(0, 10);
-        assertFalse("less than", filter.accept(new Integer(-1)));
-        assertTrue("in range", filter.accept(new Integer(0)));
-        assertTrue("in range", filter.accept(new Integer(5)));
-        assertTrue("in range", filter.accept(new Integer(10)));
-        assertFalse("greater than", filter.accept(new Integer(11)));
+        assertFalse("less than", filter.accept(Integer.valueOf(-1)));
+        assertTrue("in range", filter.accept(Integer.valueOf(0)));
+        assertTrue("in range", filter.accept(Integer.valueOf(5)));
+        assertTrue("in range", filter.accept(Integer.valueOf(10)));
+        assertFalse("greater than", filter.accept(Integer.valueOf(11)));
     }
 
     @Test
     public void testDecideSingle()
     {
         final IntFilter filter = new IntRangeFilter(0, 0);
-        assertFalse("less than", filter.accept(new Integer(-1)));
-        assertTrue("in range", filter.accept(new Integer(0)));
-        assertFalse("greater than", filter.accept(new Integer(1)));
+        assertFalse("less than", filter.accept(Integer.valueOf(-1)));
+        assertTrue("in range", filter.accept(Integer.valueOf(0)));
+        assertFalse("greater than", filter.accept(Integer.valueOf(1)));
     }
 
     @Test
     public void testDecideEmpty()
     {
         final IntFilter filter = new IntRangeFilter(10, 0);
-        assertFalse("out", filter.accept(new Integer(-1)));
-        assertFalse("out", filter.accept(new Integer(0)));
-        assertFalse("out", filter.accept(new Integer(5)));
-        assertFalse("out", filter.accept(new Integer(10)));
-        assertFalse("out", filter.accept(new Integer(11)));
+        assertFalse("out", filter.accept(Integer.valueOf(-1)));
+        assertFalse("out", filter.accept(Integer.valueOf(0)));
+        assertFalse("out", filter.accept(Integer.valueOf(5)));
+        assertFalse("out", filter.accept(Integer.valueOf(10)));
+        assertFalse("out", filter.accept(Integer.valueOf(11)));
     }
 
     @Test
